--- a/index.html
+++ b/index.html
@@ -4,15 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <!-- <link
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
       integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    /> -->
+    />
+
     <link rel="stylesheet" href="style.css" />
   </head>
+
+  <!-- header -->
+  <header class="border">
+    <nav class="logo-link">
+      <ul>
+        <img src="./img/logo-small.png" alt="logo-header" />
+        <li><a href="#">Perchè Dropbox</a></li>
+        <li><a href="#">Funzioni</a></li>
+        <li><a href="#">Piani e prezzi</a></li>
+      </ul>
+    </nav>
+    <nav class="link-bottone">
+      <ul>
+        <li><a href="#">Supporto</a></li>
+        <li><a href="#">Contatta l'ufficio vendite</a></li>
+        <li><a href="#">Accedi</a></li>
+        <li><button class="bt-piccolo-blu">Inizia</button></li>
+      </ul>
+    </nav>
+  </header>
 
   <body></body>
 </html>
