creazione top main

--- a/index.html
+++ b/index.html
@@ -35,5 +35,41 @@
     </nav>
   </header>
 
-  <body></body>
+  <!-- fine header -->
+
+  <!-- inizio main -->
+
+  <body>
+    <main>
+      <div class="container">
+        <span class="background-azzurro">
+          <h1>
+            Tutto cio che ti serve per il <br />
+            lavoro,in un unico posto
+          </h1>
+          <section class="top-main">
+            <div class="lista-main-azzurro">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
+                omnis ipsam quas cupiditate libero laboriosam eos dolorem
+                facilis consectetur, perspiciatis ullam fugiat nesciunt, maiores
+                eligendi aliquam nemo magnam ducimus ut.
+              </p>
+              <button class="bt-grande-blu">
+                Inizia la tua prova gratuita
+              </button>
+              <p>Lorem ipsum dolor sit amet.</p>
+              <div>freccia giù</div>
+            </div>
+            <figure class="immagine-main-azzurro border">
+              <img src="./img/jumbo.png" alt="immag main top" />
+            </figure>
+          </section>
+        </span>
+      </div>
+      <div class="container">
+        <h1>ciaoooo</h1>
+      </div>
+    </main>
+  </body>
 </html>
