--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
 
   <!-- header -->
-  <header class="border">
+  <header>
     <nav class="logo-link">
       <ul>
         <img src="./img/logo-small.png" alt="logo-header" />
@@ -41,35 +41,44 @@
 
   <body>
     <main>
-      <div class="container">
-        <span class="background-azzurro">
-          <h1>
-            Tutto cio che ti serve per il <br />
-            lavoro,in un unico posto
-          </h1>
-          <section class="top-main">
-            <div class="lista-main-azzurro">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
-                omnis ipsam quas cupiditate libero laboriosam eos dolorem
-                facilis consectetur, perspiciatis ullam fugiat nesciunt, maiores
-                eligendi aliquam nemo magnam ducimus ut.
-              </p>
-              <button class="bt-grande-blu">
-                Inizia la tua prova gratuita
-              </button>
-              <p>Lorem ipsum dolor sit amet.</p>
-              <div>freccia giù</div>
-            </div>
-            <figure class="immagine-main-azzurro border">
-              <img src="./img/jumbo.png" alt="immag main top" />
-            </figure>
-          </section>
-        </span>
+      <!-- prima parte main -->
+      <div class="azzurro">
+        <div class="container">
+          <span class="background-azzurro">
+            <h1>
+              Tutto cio che ti serve per il <br />
+              lavoro,in un unico posto
+            </h1>
+            <section class="top-main">
+              <div class="testo-main-azzurro">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Beatae omnis ipsam quas cupiditate libero laboriosam eos
+                  dolorem facilis consectetur, perspiciatis ullam fugiat
+                  nesciunt, maiores eligendi aliquam nemo magnam ducimus ut.
+                </p>
+                <button class="bt-grande-blu">
+                  Inizia la tua prova gratuita
+                </button>
+                <p>Lorem ipsum dolor sit amet.</p>
+                <div>freccia giù</div>
+              </div>
+              <figure class="immagine-main-azzurro">
+                <img src="./img/jumbo.png" alt="immag main top" />
+              </figure>
+            </section>
+          </span>
+        </div>
       </div>
-      <div class="container">
-        <h1>ciaoooo</h1>
-      </div>
+
+      <!-- fine prima parte main -->
+
+      <!-- seconda parte main -->
+      <span class="piano business">
+        <div class="container">
+          <h1>ciaoooo</h1>
+        </div>
+      </span>
     </main>
   </body>
 </html>
