--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header>
     <nav class="logo-link">
       <ul>
-        <img src="./img/logo-small.png" alt="logo-header" />
+        <li><img src="./img/logo-small.png" alt="logo-header" /></li>
         <li><a href="#">Perchè Dropbox</a></li>
         <li><a href="#">Funzioni</a></li>
         <li><a href="#">Piani e prezzi</a></li>
@@ -52,16 +52,18 @@
             <section class="top-main">
               <div class="testo-main-azzurro">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Beatae omnis ipsam quas cupiditate libero laboriosam eos
-                  dolorem facilis consectetur, perspiciatis ullam fugiat
-                  nesciunt, maiores eligendi aliquam nemo magnam ducimus ut.
+                  Finalmente tutti i tuoi strumenti,contenuti e <br />
+                  collaboratori sono accessibili dallo stesso posto.<br />
+                  Dropbox Business è più di uno spazio di<br />
+                  archiviazione sicuro:è un modo intelligente e <br />
+                  integrato per ottimizzare il flusso di lavoro <br />
+                  esistente.
                 </p>
                 <button class="bt-grande-blu">
                   Inizia la tua prova gratuita
                 </button>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <div>freccia giù</div>
+                <p>Annulla in qualsiasi momento.</p>
+                <i class="fa-solid fa-arrow-down"></i>
               </div>
               <figure class="immagine-main-azzurro">
                 <img src="./img/jumbo.png" alt="immag main top" />
@@ -74,9 +76,11 @@
       <!-- fine prima parte main -->
 
       <!-- seconda parte main -->
-      <span class="piano business">
-        <div class="container">
-          <h1>ciaoooo</h1>
+      <span class="business">
+        <div class="container border">
+          <h2>Trova il piano business che fa per te</h2>
+          <p><span class="flag-blu"></span>Fatturazione mensile</p>
+          <p><span class="flag-gray"></span>Fatturazione annuale</p>
         </div>
       </span>
     </main>
