--- a/index.html
+++ b/index.html
@@ -81,6 +81,25 @@
           <h2>Trova il piano business che fa per te</h2>
           <p><span class="flag-blu"></span>Fatturazione mensile</p>
           <p><span class="flag-gray"></span>Fatturazione annuale</p>
+          <div class="row">
+            <div class="col-1-3">
+              <div class="col-1-1 border"><p>Singolo</p></div>
+              <h2>Professional</h2>
+              <ul>
+                <li>€ 12,00</li>
+                <li>/mese</li>
+              </ul>
+              <ul>
+                <li>1 utente</li>
+                <li>5tb di spazio di archiviazione</li>
+                <li><button></button></li>
+                <li>oppure <a href="#">acquista ora</a></li>
+                <li><b>Punti salienti del piano</b></li>
+                <li>&check;Invia file fino a 100GB con DropBox Transfert</li>
+                <li>Cartelle offline su dispositivi mobili</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </span>
     </main>
