ricorrezione prima sezione

--- a/index.html
+++ b/index.html
@@ -42,34 +42,36 @@
   <body>
     <main>
       <!-- prima parte main -->
-      <div class="azzurro">
+      <div id="jumbo">
         <div class="container">
-          <span class="background-azzurro">
-            <h1>
-              Tutto cio che ti serve per il <br />
-              lavoro,in un unico posto
-            </h1>
-            <section class="top-main">
-              <div class="testo-main-azzurro">
-                <p>
-                  Finalmente tutti i tuoi strumenti,contenuti e <br />
-                  collaboratori sono accessibili dallo stesso posto.<br />
-                  Dropbox Business è più di uno spazio di<br />
-                  archiviazione sicuro:è un modo intelligente e <br />
-                  integrato per ottimizzare il flusso di lavoro <br />
-                  esistente.
-                </p>
-                <button class="bt-grande-blu">
-                  Inizia la tua prova gratuita
-                </button>
-                <p>Annulla in qualsiasi momento.</p>
+          <h1>
+            Tutto cio che ti serve per il <br />
+            lavoro,in un unico posto
+          </h1>
+          <div class="row border">
+            <div class="col-30">
+              <p>
+                Finalmente tutti i tuoi strumenti,contenuti e <br />
+                collaboratori sono accessibili dallo stesso posto.<br />
+                Dropbox Business è più di uno spazio di<br />
+                archiviazione sicuro:è un modo intelligente e <br />
+                integrato per ottimizzare il flusso di lavoro <br />
+                esistente.
+              </p>
+              <button class="bt-grande-blu">
+                Inizia la tua prova gratuita
+              </button>
+              <p>Annulla in qualsiasi momento.</p>
+              <div>
                 <i class="fa-solid fa-arrow-down"></i>
               </div>
-              <figure class="immagine-main-azzurro">
+            </div>
+            <div class="col-70">
+              <div>
                 <img src="./img/jumbo.png" alt="immag main top" />
-              </figure>
-            </section>
-          </span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -94,9 +96,11 @@
                 <li>5tb di spazio di archiviazione</li>
                 <li><button></button></li>
                 <li>oppure <a href="#">acquista ora</a></li>
+              </ul>
+              <ul>
                 <li><b>Punti salienti del piano</b></li>
                 <li>&check;Invia file fino a 100GB con DropBox Transfert</li>
-                <li>Cartelle offline su dispositivi mobili</li>
+                <li>&check;Cartelle offline su dispositivi mobili</li>
               </ul>
             </div>
           </div>
