--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
 
   <!-- fine header -->
 
-  <!-- inizio main -->
-
   <body>
     <main>
-      <!-- prima parte main -->
+      <!-- inizio main -->
+
+      <!-- inizio jumbo -->
       <div id="jumbo">
         <div class="container">
           <h1>
             Tutto cio che ti serve per il <br />
             lavoro,in un unico posto
           </h1>
-          <div class="row border">
+          <div class="row">
             <div class="col-30">
               <p>
                 Finalmente tutti i tuoi strumenti,contenuti e <br />
@@ -75,10 +75,11 @@
         </div>
       </div>
 
-      <!-- fine prima parte main -->
+      <!-- fine jumbo -->
 
-      <!-- seconda parte main -->
-      <span class="business">
+      <!-- inizio main business -->
+
+      <div class="business border">
         <div class="container border">
           <h2>Trova il piano business che fa per te</h2>
           <p><span class="flag-blu"></span>Fatturazione mensile</p>
@@ -86,26 +87,75 @@
           <div class="row">
             <div class="col-1-3">
               <div class="col-1-1 border"><p>Singolo</p></div>
-              <h2>Professional</h2>
-              <ul>
-                <li>€ 12,00</li>
-                <li>/mese</li>
-              </ul>
-              <ul>
-                <li>1 utente</li>
-                <li>5tb di spazio di archiviazione</li>
-                <li><button></button></li>
-                <li>oppure <a href="#">acquista ora</a></li>
-              </ul>
-              <ul>
-                <li><b>Punti salienti del piano</b></li>
-                <li>&check;Invia file fino a 100GB con DropBox Transfert</li>
-                <li>&check;Cartelle offline su dispositivi mobili</li>
-              </ul>
+              <div class="contenuti-row border">
+                <h3>Professional</h3>
+                <ul>
+                  <li>€ 12,00</li>
+                  <li>/mese</li>
+                </ul>
+                <ul>
+                  <li>1 utente</li>
+                  <li>5tb di spazio di archiviazione</li>
+                  <li><button></button></li>
+                  <li>oppure <a href="#">acquista ora</a></li>
+                </ul>
+                <ul>
+                  <li><b>Punti salienti del piano</b></li>
+                  <li>&check;Invia file fino a 100GB con DropBox Transfert</li>
+                  <li>&check;Cartelle offline su dispositivi mobili</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="col-1-3">
+              <div class="col-1-1 border"><p>Singolo</p></div>
+              <div class="contenuti-row border">
+                <h3>Professional</h3>
+                <ul>
+                  <li>€ 12,00</li>
+                  <li>/mese</li>
+                </ul>
+                <ul>
+                  <li>1 utente</li>
+                  <li>5tb di spazio di archiviazione</li>
+                  <li><button></button></li>
+                  <li>oppure <a href="#">acquista ora</a></li>
+                </ul>
+                <ul>
+                  <li><b>Punti salienti del piano</b></li>
+                  <li>&check;Invia file fino a 100GB con DropBox Transfert</li>
+                  <li>&check;Cartelle offline su dispositivi mobili</li>
+                  <li>hello</li>
+                  <li>world</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="col-1-3">
+              <div class="col-1-1 border"><p>Singolo</p></div>
+              <div class="contenuti-row border">
+                <h3>Professional</h3>
+                <ul>
+                  <li>€ 12,00</li>
+                  <li>/mese</li>
+                </ul>
+                <ul>
+                  <li>1 utente</li>
+                  <li>5tb di spazio di archiviazione</li>
+                  <li><button></button></li>
+                  <li>oppure <a href="#">acquista ora</a></li>
+                </ul>
+                <ul>
+                  <li><b>Punti salienti del piano</b></li>
+                  <li>&check;Invia file fino a 100GB con DropBox Transfert</li>
+                  <li>&check;Cartelle offline su dispositivi mobili</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
-      </span>
+      </div>
+      <!-- fine main business -->
     </main>
   </body>
 </html>
