--- a/screenshot.html
+++ b/screenshot.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>screenshot</title>
+    <link rel="stylesheet" href="./screenshot-style.css" />
   </head>
   <body>
     <img src="./image.png" alt="" />
