--- a/prova.html
+++ b/prova.html
@@ -12,7 +12,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css-prova.css" />
   </head>
 
   <!-- header -->
@@ -78,45 +78,27 @@
       <!-- fine jumbo -->
 
       <!-- inizio main business -->
-
-      <div class="business">
+      <section class="business">
         <div class="container">
-          <div class="business-topper">
-            <h2>Trova il piano business che fa per te</h2>
-            <p><span class="flag-blu"></span>Fatturazione mensile</p>
-            <p><span class="flag-gray"></span>Fatturazione annuale</p>
+          <h2>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo
+            veritatis vel modi fugit!
+          </h2>
+          <div>
+            <span class="flag-blu"></span>ciao
+            <span class="flag-gray"></span>ciao
           </div>
           <div class="row">
             <div class="col-1-3 border">
-              <div class="offer-type border"><p>Singolo</p></div>
-              <div class="card">
-                <h3>Professional</h3>
+              <div class="card"></div>
+              <p>Singolo</p>
+              <nav class="costs">
                 <ul>
-                  <li>€ 12,00</li>
+                  <li><h3>Professional</h3></li>
+                  <li><b>€ 12.00</b></li>
                   <li>/mese</li>
                 </ul>
-                <ul>
-                  <li>1 utente</li>
-                  <li>5tb di spazio di archiviazione</li>
-                  <li><button></button></li>
-                  <li>oppure <a href="#">acquista ora</a></li>
-                </ul>
-                <ul>
-                  <li><b>Punti salienti del piano</b></li>
-                  <li>&check;Invia file fino a 100GB con DropBox Transfert</li>
-                  <li>&check;Cartelle offline su dispositivi mobili</li>
-                </ul>
-              </div>
-            </div>
 
-            <div class="col-1-3 border">
-              <div class="offer-type border"><p>Singolo</p></div>
-              <div class="card">
-                <h3>Professional</h3>
-                <ul>
-                  <li>€ 12,00</li>
-                  <li>/mese</li>
-                </ul>
                 <ul>
                   <li>1 utente</li>
                   <li>5tb di spazio di archiviazione</li>
@@ -127,20 +109,19 @@
                   <li><b>Punti salienti del piano</b></li>
                   <li>&check;Invia file fino a 100GB con DropBox Transfert</li>
                   <li>&check;Cartelle offline su dispositivi mobili</li>
-                  <li>hello</li>
-                  <li>world</li>
                 </ul>
-              </div>
+              </nav>
             </div>
-
             <div class="col-1-3 border">
-              <div class="offer-type border"><p>Singolo</p></div>
-              <div class="card">
-                <h3>Professional</h3>
+              <div class="card"></div>
+              <p>Singolo</p>
+              <nav class="costs">
                 <ul>
-                  <li>€ 12,00</li>
+                  <li><h3>Professional</h3></li>
+                  <li><b>€ 12.00</b></li>
                   <li>/mese</li>
                 </ul>
+
                 <ul>
                   <li>1 utente</li>
                   <li>5tb di spazio di archiviazione</li>
@@ -152,11 +133,34 @@
                   <li>&check;Invia file fino a 100GB con DropBox Transfert</li>
                   <li>&check;Cartelle offline su dispositivi mobili</li>
                 </ul>
-              </div>
+              </nav>
+            </div>
+            <div class="col-1-3 border">
+              <div class="card"></div>
+              <p>Singolo</p>
+              <nav class="costs">
+                <ul>
+                  <li><h3>Professional</h3></li>
+                  <li><b>€ 12.00</b></li>
+                  <li>/mese</li>
+                </ul>
+
+                <ul>
+                  <li>1 utente</li>
+                  <li>5tb di spazio di archiviazione</li>
+                  <li><button></button></li>
+                  <li>oppure <a href="#">acquista ora</a></li>
+                </ul>
+                <ul>
+                  <li><b>Punti salienti del piano</b></li>
+                  <li>&check;Invia file fino a 100GB con DropBox Transfert</li>
+                  <li>&check;Cartelle offline su dispositivi mobili</li>
+                </ul>
+              </nav>
             </div>
           </div>
         </div>
-      </div>
+      </section>
 
       <!-- fine main business -->
     </main>
