fine impostazione seconda tabella

--- a/prova.html
+++ b/prova.html
@@ -90,73 +90,94 @@
           </div>
           <div class="row">
             <div class="col-1-3 border">
-              <div class="card"></div>
-              <p>Singolo</p>
-              <nav class="costs">
-                <ul>
-                  <li><h3>Professional</h3></li>
-                  <li><b>€ 12.00</b></li>
-                  <li>/mese</li>
-                </ul>
+              <div class="card">
+                <p>Singolo</p>
+                <nav class="costs">
+                  <ul>
+                    <li><h3>Professional</h3></li>
+                    <li><b>€ 12.00</b></li>
+                    <li>/mese</li>
+                  </ul>
 
-                <ul>
-                  <li>1 utente</li>
-                  <li>5tb di spazio di archiviazione</li>
-                  <li><button></button></li>
-                  <li>oppure <a href="#">acquista ora</a></li>
-                </ul>
-                <ul>
-                  <li><b>Punti salienti del piano</b></li>
-                  <li>&check;Invia file fino a 100GB con DropBox Transfert</li>
-                  <li>&check;Cartelle offline su dispositivi mobili</li>
-                </ul>
-              </nav>
+                  <ul>
+                    <li>1 utente</li>
+                    <li>5tb di spazio di archiviazione</li>
+                    <li>
+                      <button class="bt-grande-blu">
+                        Prova gratis per 30 giorni
+                      </button>
+                    </li>
+                    <li>oppure <a href="#">acquista ora</a></li>
+                  </ul>
+                  <ul>
+                    <li><b>Punti salienti del piano</b></li>
+                    <li>
+                      &check;Invia file fino a 100GB con DropBox Transfert
+                    </li>
+                    <li>&check;Cartelle offline su dispositivi mobili</li>
+                  </ul>
+                </nav>
+              </div>
             </div>
             <div class="col-1-3 border">
-              <div class="card"></div>
-              <p>Singolo</p>
-              <nav class="costs">
-                <ul>
-                  <li><h3>Professional</h3></li>
-                  <li><b>€ 12.00</b></li>
-                  <li>/mese</li>
-                </ul>
+              <div class="card">
+                <p>Singolo</p>
+                <nav class="costs">
+                  <ul>
+                    <li><h3>Professional</h3></li>
+                    <li><b>€ 12.00</b></li>
+                    <li>/mese</li>
+                  </ul>
 
-                <ul>
-                  <li>1 utente</li>
-                  <li>5tb di spazio di archiviazione</li>
-                  <li><button></button></li>
-                  <li>oppure <a href="#">acquista ora</a></li>
-                </ul>
-                <ul>
-                  <li><b>Punti salienti del piano</b></li>
-                  <li>&check;Invia file fino a 100GB con DropBox Transfert</li>
-                  <li>&check;Cartelle offline su dispositivi mobili</li>
-                </ul>
-              </nav>
+                  <ul>
+                    <li>1 utente</li>
+                    <li>5tb di spazio di archiviazione</li>
+                    <li>
+                      <button class="bt-grande-blu">
+                        Prova gratis per 30 giorni
+                      </button>
+                    </li>
+                    <li>oppure <a href="#">acquista ora</a></li>
+                  </ul>
+                  <ul>
+                    <li><b>Punti salienti del piano</b></li>
+                    <li>
+                      &check;Invia file fino a 100GB con DropBox Transfert
+                    </li>
+                    <li>&check;Cartelle offline su dispositivi mobili</li>
+                  </ul>
+                </nav>
+              </div>
             </div>
             <div class="col-1-3 border">
-              <div class="card"></div>
-              <p>Singolo</p>
-              <nav class="costs">
-                <ul>
-                  <li><h3>Professional</h3></li>
-                  <li><b>€ 12.00</b></li>
-                  <li>/mese</li>
-                </ul>
+              <div class="card">
+                <p>Singolo</p>
+                <nav class="costs">
+                  <ul>
+                    <li><h3>Professional</h3></li>
+                    <li><b>€ 12.00</b></li>
+                    <li>/mese</li>
+                  </ul>
 
-                <ul>
-                  <li>1 utente</li>
-                  <li>5tb di spazio di archiviazione</li>
-                  <li><button></button></li>
-                  <li>oppure <a href="#">acquista ora</a></li>
-                </ul>
-                <ul>
-                  <li><b>Punti salienti del piano</b></li>
-                  <li>&check;Invia file fino a 100GB con DropBox Transfert</li>
-                  <li>&check;Cartelle offline su dispositivi mobili</li>
-                </ul>
-              </nav>
+                  <ul>
+                    <li>1 utente</li>
+                    <li>5tb di spazio di archiviazione</li>
+                    <li>
+                      <button class="bt-grande-blu">
+                        Prova gratis per 30 giorni
+                      </button>
+                    </li>
+                    <li>oppure <a href="#">acquista ora</a></li>
+                  </ul>
+                  <ul>
+                    <li><b>Punti salienti del piano</b></li>
+                    <li>
+                      &check;Invia file fino a 100GB con DropBox Transfert
+                    </li>
+                    <li>&check;Cartelle offline su dispositivi mobili</li>
+                  </ul>
+                </nav>
+              </div>
             </div>
           </div>
         </div>
