--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
 
   <!-- header -->
@@ -78,85 +78,132 @@
       <!-- fine jumbo -->
 
       <!-- inizio main business -->
-
-      <div class="business">
+      <section class="business">
         <div class="container">
-          <div class="business-topper">
-            <h2>Trova il piano business che fa per te</h2>
-            <p><span class="flag-blu"></span>Fatturazione mensile</p>
-            <p><span class="flag-gray"></span>Fatturazione annuale</p>
+          <h2>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo
+            veritatis vel modi fugit!
+          </h2>
+          <div>
+            <span class="flag-blu"></span>ciao
+            <span class="flag-gray"></span>ciao
           </div>
+
           <div class="row">
             <div class="col-1-3 border">
-              <div class="offer-type border"><p>Singolo</p></div>
               <div class="card">
-                <h3>Professional</h3>
-                <ul>
-                  <li>€ 12,00</li>
-                  <li>/mese</li>
-                </ul>
-                <ul>
-                  <li>1 utente</li>
-                  <li>5tb di spazio di archiviazione</li>
-                  <li><button></button></li>
-                  <li>oppure <a href="#">acquista ora</a></li>
-                </ul>
-                <ul>
-                  <li><b>Punti salienti del piano</b></li>
-                  <li>&check;Invia file fino a 100GB con DropBox Transfert</li>
-                  <li>&check;Cartelle offline su dispositivi mobili</li>
-                </ul>
+                <p class="top-list">Singolo</p>
+                <nav class="costs">
+                  <ul>
+                    <li><h3>Professional</h3></li>
+                    <li><b>€ 12.00</b></li>
+                    <li>/mese</li>
+                  </ul>
+                  <ul>
+                    <li>1 utente</li>
+                    <li>5tb di spazio di archiviazione</li>
+                    <li>
+                      <button class="bt-grande-blu">
+                        Prova gratis per 30 giorni
+                      </button>
+                    </li>
+                    <li>oppure <a href="#">acquista ora</a></li>
+                  </ul>
+                  <ul>
+                    <li><b>Punti salienti del piano</b></li>
+                    <li>
+                      &check;Invia file fino a 100GB con DropBox Transfert
+                    </li>
+                    <li>&check;Cartelle offline su dispositivi mobili</li>
+                  </ul>
+                </nav>
               </div>
             </div>
 
             <div class="col-1-3 border">
-              <div class="offer-type border"><p>Singolo</p></div>
               <div class="card">
-                <h3>Professional</h3>
-                <ul>
-                  <li>€ 12,00</li>
-                  <li>/mese</li>
-                </ul>
-                <ul>
-                  <li>1 utente</li>
-                  <li>5tb di spazio di archiviazione</li>
-                  <li><button></button></li>
-                  <li>oppure <a href="#">acquista ora</a></li>
-                </ul>
-                <ul>
-                  <li><b>Punti salienti del piano</b></li>
-                  <li>&check;Invia file fino a 100GB con DropBox Transfert</li>
-                  <li>&check;Cartelle offline su dispositivi mobili</li>
-                  <li>hello</li>
-                  <li>world</li>
-                </ul>
+                <p class="top-list">Singolo</p>
+                <nav class="costs">
+                  <ul>
+                    <li><h3>Professional</h3></li>
+                    <li><b>€ 12.00</b></li>
+                    <li>/mese</li>
+                  </ul>
+
+                  <ul>
+                    <li>1 utente</li>
+                    <li>5tb di spazio di archiviazione</li>
+                    <li>
+                      <button class="bt-grande-blu">
+                        Prova gratis per 30 giorni
+                      </button>
+                    </li>
+                    <li>oppure <a href="#">acquista ora</a></li>
+                  </ul>
+                  <ul>
+                    <li><b>Punti salienti del piano</b></li>
+                    <li>
+                      &check;Invia file fino a 100GB con DropBox Transfert
+                    </li>
+                    <li>&check;Cartelle offline su dispositivi mobili</li>
+                    <li>hello</li>
+                    <li>world</li>
+                  </ul>
+                </nav>
               </div>
             </div>
 
             <div class="col-1-3 border">
-              <div class="offer-type border"><p>Singolo</p></div>
               <div class="card">
-                <h3>Professional</h3>
-                <ul>
-                  <li>€ 12,00</li>
-                  <li>/mese</li>
-                </ul>
-                <ul>
-                  <li>1 utente</li>
-                  <li>5tb di spazio di archiviazione</li>
-                  <li><button></button></li>
-                  <li>oppure <a href="#">acquista ora</a></li>
-                </ul>
-                <ul>
-                  <li><b>Punti salienti del piano</b></li>
-                  <li>&check;Invia file fino a 100GB con DropBox Transfert</li>
-                  <li>&check;Cartelle offline su dispositivi mobili</li>
-                </ul>
+                <p class="top-list">Singolo</p>
+                <nav class="costs">
+                  <ul>
+                    <li><h3>Professional</h3></li>
+                    <li><b>€ 12.00</b></li>
+                    <li>/mese</li>
+                  </ul>
+
+                  <ul>
+                    <li>1 utente</li>
+                    <li>5tb di spazio di archiviazione</li>
+                    <li>
+                      <button class="bt-grande-blu">
+                        Prova gratis per 30 giorni
+                      </button>
+                    </li>
+                    <li>oppure <a href="#">acquista ora</a></li>
+                  </ul>
+                  <ul>
+                    <li><b>Punti salienti del piano</b></li>
+                    <li>
+                      &check;Invia file fino a 100GB con DropBox Transfert
+                    </li>
+                    <li>&check;Cartelle offline su dispositivi mobili</li>
+                  </ul>
+                </nav>
               </div>
             </div>
           </div>
+          <section class="selling-office-contacts">
+            <div class="row">
+              <div class="col-1-1">
+                <span class="top-list">Team</span>
+                <div class="bottom-business">
+                  <h3 class="inline">Enterprise</h3>
+                  <button class="bt-grande-blu">
+                    Contatta l'ufficio vendite
+                  </button>
+                </div>
+                <p>Lorem ipsum dolor sit amet.</p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Veritatis, officia.
+                </p>
+              </div>
+            </div>
+          </section>
         </div>
-      </div>
+      </section>
 
       <!-- fine main business -->
     </main>
