inizio terza tabella main

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <li>
                       &check;Invia file fino a 100GB con DropBox Transfert
                     </li>
-                    <li>&check;Cartelle offline su dispositivi mobili</li>
+                    <li>&check;Cartelle line su dispositivi mobili</li>
                   </ul>
                 </nav>
               </div>
@@ -184,7 +184,7 @@
               </div>
             </div>
           </div>
-          <section class="selling-office-contacts">
+          <section class="selling-office-contacts border">
             <div class="row">
               <div class="col-1-1">
                 <span class="top-list">Team</span>
@@ -206,6 +206,11 @@
       </section>
 
       <!-- fine main business -->
+
+      <!-- inizio find a partner -->
+
+      <!-- fine find a partner -->
     </main>
+    <footer><h1>FOOOOOOOTEEEEEEEEEEEEEEEEEER</h1></footer>
   </body>
 </html>
