--- a/prova.html
+++ b/prova.html
@@ -12,7 +12,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="./css-prova.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
 
   <!-- header -->
@@ -88,10 +88,41 @@
             <span class="flag-blu"></span>ciao
             <span class="flag-gray"></span>ciao
           </div>
+
           <div class="row">
             <div class="col-1-3 border">
               <div class="card">
-                <p>Singolo</p>
+                <p class="top-list">Singolo</p>
+                <nav class="costs">
+                  <ul>
+                    <li><h3>Professional</h3></li>
+                    <li><b>€ 12.00</b></li>
+                    <li>/mese</li>
+                  </ul>
+                  <ul>
+                    <li>1 utente</li>
+                    <li>5tb di spazio di archiviazione</li>
+                    <li>
+                      <button class="bt-grande-blu">
+                        Prova gratis per 30 giorni
+                      </button>
+                    </li>
+                    <li>oppure <a href="#">acquista ora</a></li>
+                  </ul>
+                  <ul>
+                    <li><b>Punti salienti del piano</b></li>
+                    <li>
+                      &check;Invia file fino a 100GB con DropBox Transfert
+                    </li>
+                    <li>&check;Cartelle line su dispositivi mobili</li>
+                  </ul>
+                </nav>
+              </div>
+            </div>
+
+            <div class="col-1-3 border">
+              <div class="card">
+                <p class="top-list">Singolo</p>
                 <nav class="costs">
                   <ul>
                     <li><h3>Professional</h3></li>
@@ -115,43 +146,16 @@
                       &check;Invia file fino a 100GB con DropBox Transfert
                     </li>
                     <li>&check;Cartelle offline su dispositivi mobili</li>
+                    <li>hello</li>
+                    <li>world</li>
                   </ul>
                 </nav>
               </div>
             </div>
-            <div class="col-1-3 border">
-              <div class="card">
-                <p>Singolo</p>
-                <nav class="costs">
-                  <ul>
-                    <li><h3>Professional</h3></li>
-                    <li><b>€ 12.00</b></li>
-                    <li>/mese</li>
-                  </ul>
 
-                  <ul>
-                    <li>1 utente</li>
-                    <li>5tb di spazio di archiviazione</li>
-                    <li>
-                      <button class="bt-grande-blu">
-                        Prova gratis per 30 giorni
-                      </button>
-                    </li>
-                    <li>oppure <a href="#">acquista ora</a></li>
-                  </ul>
-                  <ul>
-                    <li><b>Punti salienti del piano</b></li>
-                    <li>
-                      &check;Invia file fino a 100GB con DropBox Transfert
-                    </li>
-                    <li>&check;Cartelle offline su dispositivi mobili</li>
-                  </ul>
-                </nav>
-              </div>
-            </div>
             <div class="col-1-3 border">
               <div class="card">
-                <p>Singolo</p>
+                <p class="top-list">Singolo</p>
                 <nav class="costs">
                   <ul>
                     <li><h3>Professional</h3></li>
@@ -180,10 +184,33 @@
               </div>
             </div>
           </div>
+          <section class="selling-office-contacts border">
+            <div class="row">
+              <div class="col-1-1">
+                <span class="top-list">Team</span>
+                <div class="bottom-business">
+                  <h3 class="inline">Enterprise</h3>
+                  <button class="bt-grande-blu">
+                    Contatta l'ufficio vendite
+                  </button>
+                </div>
+                <p>Lorem ipsum dolor sit amet.</p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Veritatis, officia.
+                </p>
+              </div>
+            </div>
+          </section>
         </div>
       </section>
 
       <!-- fine main business -->
+
+      <!-- inizio find a partner -->
+
+      <!-- fine find a partner -->
     </main>
+    <footer><h1>FOOOOOOOTEEEEEEEEEEEEEEEEEER</h1></footer>
   </body>
 </html>
