--- a/prova.html
+++ b/prova.html
@@ -209,6 +209,27 @@
 
       <!-- inizio find a partner -->
 
+      <section class="partner-finder">
+        <div class="container">
+          <div class="row">
+            <div class="col60">
+              <img src="./img/partner.png" alt="immag-partner" />
+            </div>
+            <div class="col40">
+              <h2>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Placeat, ipsam.
+              </h2>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Recusandae nobis quas sapiente suscipit, beatae voluptatem fuga
+                deserunt eum laudantium consequuntur.
+              </p>
+              <button class="bt-grande-bianco">Trova un partner</button>
+            </div>
+          </div>
+        </div>
+      </section>
       <!-- fine find a partner -->
     </main>
     <footer><h1>FOOOOOOOTEEEEEEEEEEEEEEEEEER</h1></footer>
