--- a/index.html
+++ b/index.html
@@ -231,6 +231,93 @@
         </div>
       </section>
       <!-- fine find a partner -->
+
+      <!-- inizio product explanation -->
+
+      <!-- fine product explanation -->
+
+      <section class="product-explanation">
+        <div class="container">
+          <h2>Esegui più operazioni con DropBox Business</h2>
+          <div class="row">
+            <div class="col-1-3">
+              <img
+                src="./img/business-feature-switching-tools.png"
+                alt="switching-tools"
+              />
+              <h3>Passa da uno strumento all'altro</h3>
+              <p>
+                Porta a termine le attività quotidiane con un solo
+                strumento.Crea,modifica e condividi contenuti cloud da
+                Documenti,Fogli e Presentazioni di Google,file Microsoft Office
+                e Dropbox Paper direttamente da Dropbox
+              </p>
+            </div>
+            <div class="col-1-3">
+              <img
+                src="img/business-feature-send-files-it.png"
+                alt="send.files"
+              />
+              <h3>Passa da uno strumento all'altro</h3>
+              <p>
+                Porta a termine le attività quotidiane con un solo
+                strumento.Crea,modifica e condividi contenuti cloud da
+                Documenti,Fogli e Presentazioni di Google,file Microsoft Office
+                e Dropbox Paper direttamente da Dropbox
+              </p>
+            </div>
+            <div class="col-1-3">
+              <img
+                src="./img/business-feature-coordinate-it.png"
+                alt="coordinate"
+              />
+              <h3>Passa da uno strumento all'altro</h3>
+              <p>
+                Porta a termine le attività quotidiane con un solo
+                strumento.Crea,modifica e condividi contenuti cloud da
+                Documenti,Fogli e Presentazioni di Google,file Microsoft Office
+                e Dropbox Paper direttamente da Dropbox
+              </p>
+            </div>
+            <div class="col-1-3">
+              <img
+                src="./img/business-feature-integrations-it.png"
+                alt="integrations"
+              />
+              <h3>Passa da uno strumento all'altro</h3>
+              <p>
+                Porta a termine le attività quotidiane con un solo
+                strumento.Crea,modifica e condividi contenuti cloud da
+                Documenti,Fogli e Presentazioni di Google,file Microsoft Office
+                e Dropbox Paper direttamente da Dropbox
+              </p>
+            </div>
+            <div class="col-1-3">
+              <img
+                src="./img/business-feature-multi-device.png"
+                alt="multi-device"
+              />
+              <h3>Passa da uno strumento all'altro</h3>
+              <p>
+                Porta a termine le attività quotidiane con un solo
+                strumento.Crea,modifica e condividi contenuti cloud da
+                Documenti,Fogli e Presentazioni di Google,file Microsoft Office
+                e Dropbox Paper direttamente da Dropbox
+              </p>
+            </div>
+            <div class="col-1-3">
+              <img src="./img/business-feature-security.png" alt="security" />
+              <h3>Passa da uno strumento all'altro</h3>
+              <p>
+                Porta a termine le attività quotidiane con un solo
+                strumento.Crea,modifica e condividi contenuti cloud da
+                Documenti,Fogli e Presentazioni di Google,file Microsoft Office
+                e Dropbox Paper direttamente da Dropbox
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer><h1>FOOOOOOOTEEEEEEEEEEEEEEEEEER</h1></footer>
   </body>
