correzione valore container

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <!-- inizio jumbo -->
       <div id="jumbo">
-        <div class="container">
+        <div class="container-xl">
           <h1>
             Tutto cio che ti serve per il <br />
             lavoro,in un unico posto
@@ -234,8 +234,6 @@
 
       <!-- inizio product explanation -->
 
-      <!-- fine product explanation -->
-
       <section class="product-explanation">
         <div class="container">
           <h2>Esegui più operazioni con DropBox Business</h2>
@@ -318,7 +316,23 @@
           </div>
         </div>
       </section>
+
+      <!-- fine product explanation -->
+
+      <!-- inizio client -->
+
+      <section class="client">
+        <div class="container">
+          <h2>Più di 500.000 team utilizzano Dropbox business</h2>
+          <a href="#">Scopri di più sui nostri clienti</a>
+        </div>
+      </section>
+      <!-- fine client -->
     </main>
-    <footer><h1>FOOOOOOOTEEEEEEEEEEEEEEEEEER</h1></footer>
+
+    <!-- fine main -->
+
+    <!-- inizio footer -->
+    <footer></footer>
   </body>
 </html>
