fine impostazione pagina

--- a/index.html
+++ b/index.html
@@ -333,6 +333,56 @@
     <!-- fine main -->
 
     <!-- inizio footer -->
-    <footer></footer>
+    <footer>
+      <div class="container-xl">
+        <section class="footer-top">
+          <nav>
+            <ul>
+              <li><h3>DropBox</h3></li>
+              <li>Applicazione desktop</li>
+              <li>Perchè Dropbox</li>
+              <li>Piani</li>
+              <li>Sicurezza</li>
+              <li>Funzioni</li>
+            </ul>
+            <ul>
+              <li><h3>DropBox</h3></li>
+              <li>Applicazione desktop</li>
+              <li>Perchè Dropbox</li>
+              <li>Piani</li>
+              <li>Sicurezza</li>
+              <li>Funzioni</li>
+            </ul>
+            <ul>
+              <li><h3>DropBox</h3></li>
+              <li>Applicazione desktop</li>
+              <li>Perchè Dropbox</li>
+              <li>Piani</li>
+              <li>Sicurezza</li>
+              <li>Funzioni</li>
+            </ul>
+            <ul>
+              <li><h3>DropBox</h3></li>
+              <li>Applicazione desktop</li>
+              <li>Perchè Dropbox</li>
+              <li>Piani</li>
+              <li>Sicurezza</li>
+              <li>Funzioni</li>
+            </ul>
+            <ul>
+              <li><h3>DropBox</h3></li>
+              <li>Applicazione desktop</li>
+              <li>Perchè Dropbox</li>
+              <li>Piani</li>
+              <li>Sicurezza</li>
+              <li>Funzioni</li>
+            </ul>
+          </nav>
+        </section>
+        <section class="footer-bottom">
+          <div class="language-selector">Italiano</div>
+        </section>
+      </div>
+    </footer>
   </body>
 </html>
