posizionamento finito da rifinire

--- a/index.html
+++ b/index.html
@@ -380,7 +380,9 @@
           </nav>
         </section>
         <section class="footer-bottom">
-          <div class="language-selector">Italiano</div>
+          <div class="row">
+            <div class="col-20">Italiano</div>
+          </div>
         </section>
       </div>
     </footer>
