--- a/index.html
+++ b/index.html
@@ -80,15 +80,13 @@
       <!-- inizio main business -->
       <section class="business">
         <div class="container">
-          <h2>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo
-            veritatis vel modi fugit!
-          </h2>
-          <div>
-            <span class="flag-blu"></span>ciao
-            <span class="flag-gray"></span>ciao
+          <div class="business-top">
+            <h2>Trova il piano business che fa per te</h2>
+            <div>
+              <span class="flag-blu"></span>Fatturazione Mensile
+              <span class="flag-gray"></span>Fatturazione Annuale
+            </div>
           </div>
-
           <div class="row">
             <div class="col-1-3 border">
               <div class="card">
@@ -102,6 +100,10 @@
                   <ul>
                     <li>1 utente</li>
                     <li>5tb di spazio di archiviazione</li>
+                    <li>
+                      Funzioni di produttività premium e condivisione file
+                      semplice
+                    </li>
                     <li>
                       <button class="bt-grande-blu">
                         Prova gratis per 30 giorni
@@ -122,17 +124,17 @@
 
             <div class="col-1-3 border">
               <div class="card">
-                <p class="top-list">Singolo</p>
+                <p class="top-list">Team</p>
                 <nav class="costs">
                   <ul>
-                    <li><h3>Professional</h3></li>
-                    <li><b>€ 12.00</b></li>
-                    <li>/mese</li>
+                    <li><h3>Advanced</h3></li>
+                    <li><b>€ 18.00</b></li>
+                    <li>/utente/mese</li>
                   </ul>
 
                   <ul>
-                    <li>1 utente</li>
-                    <li>5tb di spazio di archiviazione</li>
+                    <li>3 o più utenti</li>
+                    <li>Tutto lo spazio di cui ha bisogno il tuo team</li>
                     <li>
                       <button class="bt-grande-blu">
                         Prova gratis per 30 giorni
@@ -381,7 +383,10 @@
         </section>
         <section class="footer-bottom">
           <div class="row">
-            <div class="col-20">Italiano</div>
+            <div class="col-20">
+              <div class="hr">_____________</div>
+              <div>Italiano</div>
+            </div>
           </div>
         </section>
       </div>
