--- a/index.html
+++ b/index.html
@@ -88,10 +88,11 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-1-3 border">
-              <div class="card">
-                <p class="top-list">Singolo</p>
-                <nav class="costs">
+            <div class="col-1-3">
+              <div class="card border-gray">
+                <div class="card-head">Singolo</div>
+
+                <nav class="card-content">
                   <ul>
                     <li><h3>Professional</h3></li>
                     <li><b>€ 12.00</b></li>
@@ -99,10 +100,10 @@
                   </ul>
                   <ul>
                     <li>1 utente</li>
-                    <li>5tb di spazio di archiviazione</li>
+                    <li>5tb di spazio di archiviazione<br />sicuro</li>
                     <li>
                       Funzioni di produttività premium e condivisione file
-                      semplice
+                      semplice e <br />sicura
                     </li>
                     <li>
                       <button class="bt-grande-blu">
@@ -114,18 +115,34 @@
                   <ul>
                     <li><b>Punti salienti del piano</b></li>
                     <li>
-                      &check;Invia file fino a 100GB con DropBox Transfert
+                      <i class="fa-solid fa-check" style="color: #74c0fc"></i
+                      >Invia file fino a 100GB con DropBox Transfert
                     </li>
-                    <li>&check;Cartelle line su dispositivi mobili</li>
+                    <li>
+                      <i class="fa-solid fa-check" style="color: #74c0fc"></i
+                      >Cartelle line su dispositivi mobili
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-check" style="color: #74c0fc"></i
+                      >Risparmio del 50% rispetto alle iscrizioni singole
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-check" style="color: #74c0fc"></i
+                      >Possibilità di inserire nuovi membri del team
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-check" style="color: #74c0fc"></i
+                      >Gestione dei permessi in base ai ruoli
+                    </li>
                   </ul>
                 </nav>
               </div>
             </div>
 
-            <div class="col-1-3 border">
-              <div class="card">
-                <p class="top-list">Team</p>
-                <nav class="costs">
+            <div class="col-1-3">
+              <div class="card border-gray">
+                <div class="card-head">Team</div>
+                <nav class="card-content">
                   <ul>
                     <li><h3>Advanced</h3></li>
                     <li><b>€ 18.00</b></li>
@@ -136,6 +153,11 @@
                     <li>3 o più utenti</li>
                     <li>Tutto lo spazio di cui ha bisogno il tuo team</li>
                     <li>
+                      Sofisticate funzioni di controllo e per tenere al sicuro
+                      tutti i file del<br />
+                      tuo team
+                    </li>
+                    <li>
                       <button class="bt-grande-blu">
                         Prova gratis per 30 giorni
                       </button>
@@ -145,20 +167,30 @@
                   <ul>
                     <li><b>Punti salienti del piano</b></li>
                     <li>
-                      &check;Invia file fino a 100GB con DropBox Transfert
+                      <i class="fa-solid fa-check" style="color: #74c0fc"></i
+                      >Nessun limite di spazio per i file
                     </li>
-                    <li>&check;Cartelle offline su dispositivi mobili</li>
-                    <li>hello</li>
-                    <li>world</li>
+                    <li>
+                      <i class="fa-solid fa-check" style="color: #74c0fc"></i
+                      >Cartelle offline su Dispositivi <br />mobili
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-check" style="color: #74c0fc"></i
+                      >Risparmio del 50% rispetto alle iscrizioni singole
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-check" style="color: #74c0fc"></i>
+                      Possibilità di inserire nuovi membri del team
+                    </li>
                   </ul>
                 </nav>
               </div>
             </div>
 
-            <div class="col-1-3 border">
-              <div class="card">
-                <p class="top-list">Singolo</p>
-                <nav class="costs">
+            <div class="col-1-3">
+              <div class="card border-gray">
+                <div class="card-head">Singolo</div>
+                <nav class="card-content">
                   <ul>
                     <li><h3>Professional</h3></li>
                     <li><b>€ 12.00</b></li>
@@ -167,7 +199,7 @@
 
                   <ul>
                     <li>1 utente</li>
-                    <li>5tb di spazio di archiviazione</li>
+                    <li>5tb di spazio di archiviazione<br />sicuro</li>
                     <li>
                       <button class="bt-grande-blu">
                         Prova gratis per 30 giorni
@@ -178,25 +210,33 @@
                   <ul>
                     <li><b>Punti salienti del piano</b></li>
                     <li>
-                      &check;Invia file fino a 100GB con DropBox Transfert
+                      <i class="fa-solid fa-check" style="color: #74c0fc"></i
+                      >Invia file fino a 100GB con DropBox Transfert
                     </li>
-                    <li>&check;Cartelle offline su dispositivi mobili</li>
+                    <li>
+                      <i class="fa-solid fa-check" style="color: #74c0fc"></i
+                      >Cartelle offline su dispositivi mobili
+                    </li>
                   </ul>
                 </nav>
               </div>
             </div>
           </div>
-          <section class="selling-office-contacts border">
+          <section class="card-bottom border-gray">
             <div class="row">
               <div class="col-1-1">
-                <span class="top-list">Team</span>
+                <div class="card-head">Team</div>
                 <div class="bottom-business">
-                  <h3 class="inline">Enterprise</h3>
+                  <h3 class="inline">
+                    Enterprise
+
+                    <p><br />Lorem ipsum dolor sit amet.</p>
+                  </h3>
                   <button class="bt-grande-blu">
                     Contatta l'ufficio vendite
                   </button>
                 </div>
-                <p>Lorem ipsum dolor sit amet.</p>
+
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Veritatis, officia.
